--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/three": "^0.92.17",
     "clean-webpack-plugin": "^0.1.19",
     "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.5.0",
     "three": "^0.95.0",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
