--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   },
   "homepage": "https://github.com/Immugio/Three-js-tester#readme",
   "devDependencies": {
-    "@types/three": "^0.92.17",
     "clean-webpack-plugin": "^0.1.19",
     "file-loader": "^2.0.0",
-    "fork-ts-checker-webpack-plugin": "^0.5.0",
-    "three": "^0.95.0",
+    "fork-ts-checker-webpack-plugin": "4.0.2",
     "ts-loader": "^4.4.2",
-    "typescript": "^3.0.1",
+    "typescript": "^3.7.5",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "three": "^0.112.1"
   }
 }
