--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "module": "esnext",
+    "module": "CommonJS",
     "allowJs": true,
     "lib": [ "dom", "es2015.promise", "es2015" ]
   },
