--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.7.5",
+    "dat.gui": "^0.7.6",
     "three": "^0.112.1"
   }
 }
